--- a/flut_micro_app_home/pubspec.yaml
+++ b/flut_micro_app_home/pubspec.yaml
@@ -5,7 +5,6 @@ homepage:
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
@@ -14,10 +13,18 @@ dependencies:
     path: '../flut_micro_commons_dependencies'
   flut_micro_commons_shared:
     path: '../flut_micro_commons_shared'
+  flut_design_system_duck:
+    path: '../flut_design_system_duck'
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
+  uses-material-design: true
   assets:
+    - assets/images/
     - assets/lang/
+
+scripts:
+  localization: dart lib/commands/localization.dart
+localizationDir: assets/lang
