--- a/flut_micro_commons_dependencies/pubspec.yaml
+++ b/flut_micro_commons_dependencies/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_modular: ^3.1.1
   dio: ^4.0.0
   mobx: ^2.0.3
+  cupertino_icons: ^1.0.3
+  provider: ^6.0.0
   localization: ^1.0.0
   supercharged: ^2.0.0
   enum_to_string: ^2.0.1
