--- a/flut_micro_app_home/pubspec.yaml
+++ b/flut_micro_app_home/pubspec.yaml
@@ -16,8 +16,12 @@ dependencies:
   flut_design_system_duck:
     path: '../flut_design_system_duck'
 dev_dependencies:
+  build_runner: ^2.1.1
+  modular_codegen: ^3.0.0
+  flutter_modular_test: ^1.0.1
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^2.0.2
 
 flutter:
   uses-material-design: true
