--- a/flut_base_app_duck_drinks/android/app/src/main/AndroidManifest.xml
+++ b/flut_base_app_duck_drinks/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.jheimesilveira.duck_drinks.flut_base_app_duck_drinks">
+    package="br.com.jheimesilveira.duck_drinks.client">
    <application
-        android:label="flut_base_app_duck_drinks"
+        android:label="Duck Drinks"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
