--- a/flut_micro_app_home/pubspec.yaml
+++ b/flut_micro_app_home/pubspec.yaml
@@ -26,7 +26,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
+    - packages/flut_micro_commons_shared/assets/images/
     - assets/lang/
 
 scripts:
