--- a/flut_base_app_duck_drinks/pubspec.yaml
+++ b/flut_base_app_duck_drinks/pubspec.yaml
@@ -4,18 +4,28 @@ description: Duck Drinks
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
+  flut_micro_app_home:
+    path: '../flut_micro_app_home'
+  flut_micro_app_product:
+    path: '../flut_micro_app_product'
   flutter:
     sdk: flutter
-  flut_micro_core:
-    path: '../flut_micro_core'
+dependency_overrides:
   flut_micro_commons_dependencies:
     path: '../flut_micro_commons_dependencies'
+  flut_micro_commons_shared:
+    path: '../flut_micro_commons_shared'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^2.0.4
+  modular_test: ^1.0.1+1
+  modular_codegen: ^3.0.3
+  build_runner: ^2.1.5
+
 flutter:
   uses-material-design: true
