--- a/flut_micro_app_home/pubspec.yaml
+++ b/flut_micro_app_home/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+dependency_overrides:
   flut_micro_commons_dependencies:
     path: '../flut_micro_commons_dependencies'
   flut_micro_commons_shared:
