--- a/flut_micro_commons_shared/pubspec.yaml
+++ b/flut_micro_commons_shared/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+dependency_overrides:
+  flut_micro_commons_dependencies:
+    path: '../flut_micro_commons_dependencies'
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
