--- a/.ft_cli/configs.json
+++ b/.ft_cli/configs.json
@@ -1,42 +1,1 @@
-{
-    "repositoryPathInterface": "domain/repositories",
-    "repositoryNameFileInterface": "{{name.snakeCase}}_repository",
-    "repositoryPath": "data/repositories",
-    "repositoryNameFile": "{{name.snakeCase}}_imp_repository",
-    "repositoryNameClassInterface": "{{name.pascalCase}}Repository",
-    "repositoryNameClass": "{{name.pascalCase}}ImpRepository",
-    "datasourcePathInterface": "data/datasources",
-    "datasourceNameFileInterface": "{{name.snakeCase}}_datasource",
-    "datasourcePath": "external/datasources",
-    "datasourceNameFile": "{{name.snakeCase}}_imp_datasource",
-    "datasourceNameClassInterface": "{{name.pascalCase}}Datasource",
-    "datasourceNameClass": "{{name.pascalCase}}ImpDatasource",
-    "usecasePathInterface": "domain/usecases",
-    "usecaseNameFileInterface": "{{name.snakeCase}}_usecase",
-    "usecasePath": "domain/usecases",
-    "usecaseNameFile": "{{name.snakeCase}}_imp_usecase",
-    "usecaseNameClassInterface": "{{name.pascalCase}}Usecase",
-    "usecaseNameClass": "{{name.pascalCase}}ImpUsecase",
-    "pagePath": "presentation/ui/pages/{{name.snakeCase}}",
-    "pageNameFile": "{{name.snakeCase}}_page",
-    "pageNameClass": "{{name.pascalCase}}Page",
-    "controllerPath": "presentation/ui/pages/{{name.snakeCase}}",
-    "controllerNameFile": "{{name.snakeCase}}_controller",
-    "controllerNameClass": "{{name.pascalCase}}Controller",
-    "fileExtension": "dart",
-    "pageExtension": "dart",
-    "controllerExtension": "dart",
-    "entityPath": "domain/models/entities",
-    "entityNameFile": "{{name.snakeCase}}_entity",
-    "entityNameClass": "{{name.pascalCase}}Entity",
-    "dtoPath": "domain/models/dtos",
-    "dtoNameFile": "{{name.snakeCase}}_dto",
-    "dtoNameClass": "{{name.pascalCase}}Dto",
-    "usecaseExtension": "dart",
-    "usecaseExtensionInterface": "dart",
-    "repositoryExtension": "dart",
-    "repositoryExtensionInterface": "dart",
-    "datasourceExtension": "dart",
-    "datasourceExtensionInterface": "dart",
-    "entityExtension": "dart"
-}
+{"repositoryPathInterface":"domain/repositories","repositoryNameFileInterface":"{{name.snakeCase}}_repository","repositoryPath":"data/repositories","repositoryNameFile":"{{name.snakeCase}}_imp_repository","repositoryNameClassInterface":"{{name.pascalCase}}Repository","repositoryNameClass":"{{name.pascalCase}}ImpRepository","datasourcePathInterface":"data/datasources","datasourceNameFileInterface":"{{name.snakeCase}}_datasource","datasourcePath":"external/datasources","datasourceNameFile":"{{name.snakeCase}}_imp_datasource","datasourceNameClassInterface":"{{name.pascalCase}}Datasource","datasourceNameClass":"{{name.pascalCase}}ImpDatasource","usecasePathInterface":"domain/usecases","usecaseNameFileInterface":"{{name.snakeCase}}_usecase","usecasePath":"domain/usecases","usecaseNameFile":"{{name.snakeCase}}_imp_usecase","usecaseNameClassInterface":"{{name.pascalCase}}Usecase","usecaseNameClass":"{{name.pascalCase}}ImpUsecase","pagePath":"presentation/ui/pages/{{name.snakeCase}}","pageNameFile":"{{name.snakeCase}}_page","pageNameClass":"{{name.pascalCase}}Page","controllerPath":"presentation/ui/pages/{{name.snakeCase}}","controllerNameFile":"{{name.snakeCase}}_controller","controllerNameClass":"{{name.pascalCase}}Controller","fileExtension":"dart","pageExtension":"dart","controllerExtension":"dart","entityPath":"domain/models/entities","entityNameFile":"{{name.snakeCase}}_entity","entityNameClass":"{{name.pascalCase}}Entity","dtoPath":"domain/models/dtos","dtoNameFile":"{{name.snakeCase}}_dto","dtoNameClass":"{{name.pascalCase}}Dto","usecaseExtension":"dart","usecaseExtensionInterface":"dart","repositoryExtension":"dart","repositoryExtensionInterface":"dart","datasourceExtension":"dart","datasourceExtensionInterface":"dart","entityExtension":"dart","servicePathInterface":"domain/services","serviceNameFileInterface":"{{name.snakeCase}}_service","servicePath":"domain/services","serviceNameFile":"{{name.snakeCase}}_imp_service","serviceNameClassInterface":"{{name.pascalCase}}Service","serviceNameClass":"{{name.pascalCase}}ImpService","serviceExtension":"dart","serviceExtensionInterface":"dart"}
