--- a/flut_base_app_duck_drinks_with_flavors/pubspec.yaml
+++ b/flut_base_app_duck_drinks_with_flavors/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -34,8 +34,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
     - packages/flut_micro_app_home/assets/lang/
+    - .env_qa
+    - .env_prd
+    - .env_dev
 
 flavorizr:
   app:
