--- a/flut_micro_app_product/pubspec.yaml
+++ b/flut_micro_app_product/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flut_micro_app_product
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -19,7 +18,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.1.1
   modular_codegen: ^3.0.0
-  flutter_modular_test: ^1.0.1
+  modular_test: ^2.0.0
   flutter_test:
     sdk: flutter
   mobx_codegen: ^2.0.2
