--- a/flut_micro_commons_dependencies/pubspec.yaml
+++ b/flut_micro_commons_dependencies/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   insta_like_button: ^0.1.1
   like_button: ^2.0.4
   smooth_page_indicator: ^1.0.0+2
-
+  flutter_dotenv: ^5.0.2
+  
 dev_dependencies:
   build_runner: ^2.1.7
   modular_codegen: ^3.0.4
   modular_test: ^2.0.0
   floor_generator: ^1.2.0
+
   flutter_test:
     sdk: flutter
   mobx_codegen: ^2.0.4
