--- a/flut_micro_commons_http_client/pubspec.yaml
+++ b/flut_micro_commons_http_client/pubspec.yaml
@@ -1,11 +1,9 @@
 name: flut_micro_commons_http_client
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -19,5 +17,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  modular_test: ^2.0.0
 
 flutter:
